# pc-bench

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  analysis.ipynb
.ipynb_checkpoints/: analysis-checkpoint.ipynb
eth-stark/: Cargo.toml  build.rs
eth-stark/src/: lib.rs
gnark/: go.mod  go.sum  pc-gnark.go
ios/: .gitignore  build.sh
ios/App/: build.sh
ios/App/App/: AppApp.swift  ContentView.swift
ios/App/App.xcodeproj/: project.pbxproj
ios/App/Bindings/: .gitignore  libbindings.d  libbindings.rlib
ios/bindings/: Cargo.toml  Readme.md
ios/bindings/src/: lib.rs
ios/gnark/: Readme.md  go.mod  go.sum  pc_gnark.go
ios/gnark/zprize/: pc_zprize_gnark.go
results/a15/blst/: run1.csv  run2.csv
results/a15/gnark/: run1.csv  run2.csv  run_dummy.csv
results/a15/halo2/: run1.csv  run2.csv  run3.csv  run3.csv.too_hot
results/a15/plonky2/: run6.csv
results/a15/plonky2-keccak/: run1.csv  run2.csv.hot  run3.csv  run4.csv  run5.csv
results/a15/plonky2-poseidon/: run2.csv
results/a15/plonky2-poseidon.skip/: run1.csv  run3.csv
results/a15/pse/: run1.csv  run2.csv
results/hpc6a/ark/: run1.csv
results/hpc6a/blst/: run1.csv  run2.csv  run3.csv  run4.csv  run5.csv
results/hpc6a/gnark/: run1.csv  run2.csv  run3.csv
results/hpc6a/halo2/: run1.csv  run2.csv  run3.csv
results/hpc6a/plonky2/: run1.csv  run2.csv
results/hpc6a/plonky2-keccak/: run1.csv  run2.csv  run3.csv  run4.csv
results/hpc6a/plonky2-poseidon/: run1.csv  run2.csv
results/hpc6a/plonky2-poseidon.skip/: run1.csv
results/hpc6a/pse/: run1.csv
results/hpc6a_batch16/plonky2/: run1.csv  run2.csv
results/hpc6a_batch256/plonky2/: run1.csv
results/m1-max/: blst.csv
results/m1-max/ark/: run1.csv
results/m1-max/blst/: run1.csv  run2.csv
results/m1-max/gnark/: run1.csv
results/m1-max/halo2/: run1.csv  run2.csv  run3.csv
results/m1-max/plonky2-keccak/: run1.csv  run3.csv  run5.csv
results/m1-max/plonky2-poseidon.skip/: run3.csv  (+1 more)
src/: ark.rs  blst.rs  halo2.rs  lib.rs  main.rs  plonky2.rs  pse.rs  risc0.rs  winter.rs
(+23 files in other folders)
