[package]
name = "pc-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blstrs = "0.6.1"
ff = "0.12.1"
group = { version = "0.12.1", features = ["rand"] }
rand = "0.8.5"
rayon = "1.6.1"
plonky2=  { git = "https://github.com/mir-protocol/plonky2.git" }
log = "0.4.17"

[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
