[package]
name = "pc-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.6.1"

# BLST
blstrs = "0.6.1"
ff = "0.12.1"
group = { version = "0.12.1", features = ["rand"] }

# Plonky2
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
log = "0.4.17"

# Halo2
halo2_proofs = "0.2.0"

# PSE
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git", version = "0.3.1" }
halo2_pse = { package= "halo2_proofs",  git = "https://github.com/privacy-scaling-explorations/halo2", version = "0.2.0" }
clap = { version = "4.0.32", features = ["derive"] }

# Ark-works
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-ff = { version = "0.3.0", features = ["asm", "parallel"] }
ark-bn254 = "0.3.0"
num-traits = "0.2.15"


[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
